Fix Swagger scheme for production
