# backend/cmd/server/main.go
@@ -11,7 +11,6 @@
 // @license.url http://www.apache.org/licenses/LICENSE-2.0.html
 
 // @BasePath /api/v1
-// @schemes http https
 package main
 
 import (
